2008-05-31 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added \pgfnumtabletypeset feature. It is quite sophisticated by now and
	allows to typeset (selected parts of) numeric tables; rounds each number
	to desired accuracy and provides number format styles.

2008-05-26 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added special values 'xtick=data' and 'ytick=data' to collect the first plot's
	coordinates as tick data.

2008-05-24 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- First version of manual with pgfmanual styles is ready. It is not quite
	final, but should be enough to communicate with Pascal.
	- fixed plot expression to work properly.

2008-05-21 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added useful styles for all bar options.

2008-05-20 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- fixed some issues with stacked plots
	- added public macros \plotnum and \numplots inside of an axis
	- added options '[xy] tick label as interval=true|false'
	- added support for 'ybar interval' plot handler (which I added to PGF
	recently).

2008-05-19 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added \closedcycle command for use after \addplot. It connects the
	current plot with the x-axis to provide fillable plots easily.
	- added named coordinates 'current plot begin' and 'current plot end'

2008-05-18 Christian Feuersaenger <ludewich@users.sourceforge.net>

	- added support for stacked plots:
		- stack plots=x|y|false
		- reverse stacked plots=true|false
		- stack dir=plus|minus
	- rewrote some internals

2008-05-12 Christian Feuersaenger <ludewich@users.sourceforge.net>
	- added 'current plot style' key to \addplot
	- Added error bar support with fixed absolute/relative errors or explicit
	  absolute/relative errors for each coordinate.
	- added plot types for piecewise constant plots
	- added plot types 'ybar' and 'xbar' with option '/pgf/bar width'