@@ -1,0 +1,12 @@
+*.aux
+*.log
+*.toc
+*.out
+*.tmp
+.*.sw?
+*.pdf
+*.blg
+*.dvi
+*.idx
+*.ilg
+*.ind
