@@ -1,0 +1,11 @@
+head	G	Basis	dof	L2	A	Lmax	cgiter	maxlevel	eps
+$flags string	int	int	int	sci:8	sci:8	sci:8	int	int	std:8
+one	5	5	5	8.31160034e-02	0.00000000e+00	1.80007647e-01	2	2	-1
+two	17	17	17	2.54685628e-02	0.00000000e+00	3.75580565e-02	5	3	-1
+three	49	49	49	7.40715288e-03	0.00000000e+00	1.49212716e-02	11	4	-1
+four	129	129	129	2.10192154e-03	0.00000000e+00	4.23330523e-03	26	5	-1
+five	321	321	321	5.87352989e-04	0.00000000e+00	1.30668515e-03	43	6	-1
+six	769	769	769	1.62269942e-04	0.00000000e+00	3.88658098e-04	49	7	-1
+{with space}	1793	1793	1793	4.44248889e-05	0.00000000e+00	1.12651668e-04	52	8	-1
+{eight}	4097	4097	4097	1.20714122e-05	0.00000000e+00	3.20339285e-05	56	9	-1
+nine	9217	9217	9217	3.26101452e-06	0.00000000e+00	8.97617707e-06	59	10	-1
