@@ -1,3 +1,10 @@
+2008-06-02 Christian Feuersaenger <ludewich@users.sourceforge.net>
+
+	- I have replaced all /tikz/ options with /pgfplots/ ones. The
+	documentation is updated to reflect this change. 
+	Backwardscompatibility with \tikzstyle and the old /tikz/every... styles
+	is provided. 
+
 2008-05-31 Christian Feuersaenger <ludewich@users.sourceforge.net>
 
 	- added \pgfnumtabletypeset feature. It is quite sophisticated by now and
